# Learning_FastAPI

.github/workflows/: ci.yml  main.yml
Simple-CRUD-API/: README.md  pyproject.toml
Simple-CRUD-API/app/: models.py  routes.py
basics/: README.md  dtos.py  main.py  pyproject.toml  user.py
basics/app/: main.py  mockData.py
basics/app/schemas/: schemas.py
basics/src/: main.py  mockData.py  schemas.py
basics/src/utils/: db.py
blogging_system/: .gitignore
blogging_system/app/: database.py  main.py
blogging_system/app/models/: user.py
blogging_system/app/routers/: auth.py
blogging_system/app/schemas/: user.py
fastapi-blog/: main.py
task_management_app/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
task_management_app/.github/workflows/: ci.yml
task_management_app/src/: main.py
