[project]
name = "task-management-app"
version = "0.1.0"
description = "Task Management API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
   
]
